# leche.github.io

./: .gitignore  Cargo.toml  README.md  index.html  package.json  serve.sh  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
R/: fridge_plot.R  in_ex_model.R  microwave_plot.R  time_model.R
code/: Cargo.toml  README.md
code/cbs/: Cargo.toml
code/cbs/src/: kv_buttons.rs  lib.rs  slider.rs
code/pbs/: Cargo.toml
code/pbs/src/: lib.rs
code/pbs/src/components/: mod.rs
code/pbs/src/form/: file.rs  input.rs  textarea.rs
code/pbs/src/layout/: container.rs
code/src/: boxes.rs  constants.rs  docs.rs  footer.rs  info.rs  lib.rs  model.rs  not_found.rs  overview.rs
code/src/components/: boxes.rs  duration.rs  footer.rs  mod.rs  temperature.rs
code/src/models/: base.rs  future.rs  linear.rs  mod.rs
code/src/pages/: docs.rs  info.rs  mod.rs  overview.rs
measurements/: fridge_in_ex.csv  hospital_fridge_temp.csv  model360.csv  model90.csv  pair_temp.csv  readme.md  room_in_ex.csv  staff_warmup_temp.csv
pkg/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
static/: style.css
