[package]
name = "leche"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["pbs", "cbs"]

[dependencies]
pbs = { path = "pbs" }
cbs = { path = "cbs" }

log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
wee_alloc = "0.4"

yew = { git = "https://github.com/yewstack/yew.git" }
yew-agent = { git = "https://github.com/yewstack/yew.git" }

strum = "*"
strum_macros = "*"
derive_more = "0.99.16"
