[package]
name = "cbs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbs = { path = "../pbs" }

yew = { git = "https://github.com/yewstack/yew.git", rev = "1474c0a2826e870319d103883f7b7b45c84b4eb8" }


derive_more = "0.99.16"
num = "0.4"

strum = "*"
strum_macros = "*"