[package]
name = "cbs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbs = { path = "../pbs" }

yew = { git = "https://github.com/yewstack/yew.git", rev = "4e974dad9282eb765738394b8ee6c6a7d9baa2d9" }

num = "0.4"
strum = { version = "0.21", features = ["derive"] }
derive_more = "0.99.16"