[package]
name = "pbs"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"
description = "clone from ybc with less code duplciation"
repository = "https://github.com/Funkymaniac/pixelguesser"
license = "GNU GPLv3"

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", rev = "1474c0a2826e870319d103883f7b7b45c84b4eb8" }

derive_more = "0.99.16"
gloo = "0.3"
